# Segfaults

./: README.md  package-lock.json  readme.md  requirements.txt
Autobot/: package-lock.json  package.json
Autobot/src/: App.jsx  main.jsx
ReactApp/: .firebaserc  .gitignore  firebase.json  index.html  package-lock.json  package.json  vite.config.js
ReactApp/.firebase/: hosting.ZGlzdA.cache
ReactApp/src/: App.jsx  ContextForAuth.jsx  firebaseConfig.js  main.jsx
ReactApp/tests/: ActivityLogPage.test.jsx  AddRobotPage.test.jsx  HomePage.manageUsers.test.jsx  LoginPage.test.jsx  ManageUsersPage.test.jsx  ProtectedPage.test.jsx  RobotDashboard.arrowkeys.test.jsx  RobotDashboard.map.test.jsx  TrashViewPage.test.jsx  app.route.test.jsx  setupTests.js
RobotScripts/: .gitignore  BatteryCheck.py  CameraNode.py  DemoSuperSimpleEventTest  Dockerfile  EventCompilerNode.py  MotorNode.py  NavigationNode.py  Network.py  NetworkNode.py  RosmasterMotorNode.py  SimpleImageEventTest.py  SuperSimpleEventTest.py  YoloNode.py  YoloTrackNode.py  constraints.txt  dockercommand.txt  firestoreWaypointListener.py  geofenceControllerNode.py  gpsNode.py  gpsReaderScript.cjs  imageTester.py  loggingStandards.md  move_forward.py  norosmotorscript.py  obstacle_avoidance.py  package-lock.json  package.json  package.xml  requirements.txt  rplidar_avoidance.py  run_all.sh  status.py  webrtcpeer.py  yolo_run.sh
RobotScripts/LidarTestsNano/: avoid_obstacles.py  view_sllidar_launch.py
RobotScripts/config/: ekf.yaml  nav2_outdoor.yaml  navsat.yaml
RobotScripts/docker/: Dockerfile  LICENSE.txt  build.sh  entrypoint.sh  workspace.sh
RobotScripts/docker_nav2/: .bashrc  Dockerfile  entrypoint.sh  run_nav2_docker.sh
RobotScripts/src/: constraints.txt  requirements.txt  (+1 more)
RobotScripts/src/navigation/: package.xml  setup.py
RobotScripts/src/navigation/navigation/: FirestoreGPSListener.py  MissionPlannerNode.py  NavigationNode.py  geofenceControllerNode.py  gpsNode.py
yolodetection/: Dockerfile  YoloNode.py
(+122 files in other folders)
