<?xml version="1.0"?>
<package format="3">
  <name>navigation</name>
  <version>0.0.0</version>
  <description>Navigation nodes</description>

  <maintainer email="patrick.doolittle@gmail.com">patrick</maintainer>
  <license>Apache-2.0</license>

  <!-- Core ROS dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Python libs -->
  <exec_depend>pyserial</exec_depend>
  <exec_depend>pynmea2</exec_depend>
  <exec_depend>firebase_admin</exec_depend>

  <!-- (OPTIONAL) nav2 message types, ONLY if actually imported -->
  <!-- Uncomment only if your python code imports them -->
  <!-- <exec_depend>nav2_msgs</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

